--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
     <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
+    <button id = "buttonGarun"> Garun </button>
+    <button id = "buttonDzmer"> Dzmer </button>
     <script src="script.js"></script>
-
   </body>
 </html>
